# brandmind-ai

./: .gitignore  .secrets.baseline  LICENSE  Makefile  README.md  SECURITY.md  baseline_comparison_results.json  baseline_test.py  pyproject.toml
src/core/: pyproject.toml
src/core/src/core/brand_strategy/: __init__.py  agent_config.py  content_check.py  model_profiles.py  progress_updates.py  session.py  working_notes.py
src/core/src/core/brand_strategy/analysis/: __init__.py  messaging.py  naming.py  positioning.py  roadmap.py  synthesis.py  transition.py
src/core/src/core/brand_strategy/orchestrator/: __init__.py  brand_brief.py  phase_state.py  proactive_loops.py  quality_gate.py  rebrand_matrix.py
src/core/src/core/brand_strategy/schemas/: __init__.py  phase_1.py  phase_2.py  phase_3.py  phase_4.py  phase_5.py
src/core/src/core/brand_strategy/subagents/: __init__.py  configs.py  middleware.py
src/core/src/core/document_processing/: __init__.py  content_cleanup_processor.py  llama_parser.py  markdown_table_converter.py  models.py  page_file_updater.py  pdf_processor.py  report_generator.py  table_assembler.py  table_chain_collector.py  table_extractor.py  table_summarizer.py  text_integrity_processor.py
src/core/src/core/knowledge_graph/: __init__.py  validate_extraction_output.py
src/core/src/core/knowledge_graph/cartographer/: __init__.py  agent_config.py  document_cartographer.py
src/core/src/core/knowledge_graph/chunker/: __init__.py  batch_processor.py  document_chunker.py  page_merger.py  paragraph_chunker.py  section_finder.py  section_processor.py
src/core/src/core/knowledge_graph/curator/: __init__.py  collection_init.py  collection_schemas.py  document_library.py  entity_name_normalizer.py  entity_resolver.py  knowledge_graph_builder.py  post_processing.py  storage_manager.py
src/core/src/core/knowledge_graph/miner/: __init__.py  agent_config.py  batch_processor.py  extraction_agent.py
src/core/src/core/knowledge_graph/models/: __init__.py  chunk.py  global_map.py  triple.py
src/core/src/core/retrieval/: __init__.py  document_retriever.py  edge_scorer.py  global_search.py  kg_retriever.py  local_search.py  models.py  query_decomposer.py
src/shared/: pyproject.toml
src/shared/src/shared/: agent_types.py
src/shared/src/shared/agent_middlewares/: __init__.py  callback_types.py
src/shared/src/shared/agent_middlewares/evidence_grounding/: __init__.py  middleware.py
src/shared/src/shared/agent_middlewares/log_model_message/: __init__.py  log_message_middleware.py
src/shared/src/shared/agent_middlewares/pre_compact_notes/: __init__.py  middleware.py
src/shared/src/shared/agent_middlewares/proactive_context/: __init__.py  middleware.py
src/shared/src/shared/agent_middlewares/stop_check/: __init__.py  ensure_tasks_finished_middleware.py
src/shared/src/shared/agent_middlewares/tool_search/: __init__.py  middleware.py  registry.py
src/shared/src/shared/agent_middlewares/workspace_hygiene/: __init__.py  middleware.py
src/shared/src/shared/agent_middlewares/workspace_injection/: __init__.py  middleware.py
src/shared/src/shared/agent_models/: __init__.py  retry_gemini.py
src/shared/src/shared/agent_skills/: __init__.py  config.py
src/shared/src/shared/agent_skills/brand_strategy/: Chuyen-Ba-Bua-Signature-Full-Strategy.md
src/shared/src/shared/agent_tools/: __init__.py  crawl4ai_client.py  crawl_web.py  exceptions.py  search_web.py
src/shared/src/shared/agent_tools/analysis/: __init__.py  analyze_reviews.py  analyze_social_profile.py  get_search_autocomplete.py
src/shared/src/shared/agent_tools/browser/: README.md  __init__.py  browser_manager.py  browser_tool.py  stealth_config.py
src/shared/src/shared/agent_tools/crawler/: crawl4ai_client.py  crawl_web.py
src/shared/src/shared/agent_tools/document/: __init__.py  _output_path.py  docx_builder.py  export_to_markdown.py  generate_document.py  generate_presentation.py  generate_spreadsheet.py  list_artifacts.py  pdf_builder.py  pptx_builder.py  spreadsheet_templates.py  xlsx_builder.py
src/shared/src/shared/agent_tools/filesystem/: __init__.py  line_search.py
src/shared/src/shared/agent_tools/image/: __init__.py  edit_image.py  gemini_image_client.py  generate_brand_key.py  generate_image.py  storage.py
src/shared/src/shared/agent_tools/knowledge_graph/: __init__.py  finalize_output.py  validate_triples.py
src/shared/src/shared/agent_tools/places/: __init__.py  formatter.py  places_client.py  search_places.py
src/shared/src/shared/agent_tools/research/: __init__.py  deep_research.py
src/shared/src/shared/agent_tools/retrieval/: __init__.py  (+2 more)
src/shared/src/shared/database_clients/: __init__.py  base_class.py  base_vector_database.py
src/shared/src/shared/model_clients/: __init__.py
src/shared/src/shared/utils/: base_class.py
src/shared/src/shared/workspace/: __init__.py  profile_settings.py
(+3133 files in other folders)
