[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brandmind-ai"
version = "0.1.0"
requires-python = ">=3.10,<3.11"
dependencies = []

[project.scripts]
parse-docs = "cli.parse_documents:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cli", "src/config", "src/prompts", "src/services"]
sources = ["src"]

[tool.uv.workspace]
members = ["src/shared", "src/core"]

[dependency-groups]
chatbot = ["shared", "core"]
indexer = [
    "shared",
    "core",
    "llama-cloud-services>=0.6.76",
]
dev = [
 "pytest>=7.0.0",
 "black>=23.0.0",
 "mypy>=1.0.0",
 "isort>=5.12.0",
 "flake8>=6.0.0",
 "pytest-asyncio>=1.2.0",
]

[tool.uv.sources]
shared = { workspace = true }
core = { workspace = true }

