[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brandmind-ai"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
parse-docs = "cli.parse_documents:main"
build-kg = "cli.build_knowledge_graph:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cli", "src/config", "src/prompts", "src/services"]
sources = ["src"]

[tool.uv.workspace]
members = ["src/shared", "src/core"]

[dependency-groups]
chatbot = ["shared", "core"]
indexer = [
    "shared",
    "core[document_processing]",
]
dev = [
 "pytest>=7.0.0",
 "black>=23.0.0",
 "mypy>=1.0.0",
 "pytest-asyncio>=1.2.0",
 "ruff>=0.14.5",
 "bandit>=1.8.6",
 "scipy-stubs>=1.15.3.0",
 "types-pyyaml>=6.0.12.20250915",
 "types-requests>=2.32.4.20250913",
 "types-tqdm>=4.67.0.20250809",
]

[tool.uv.sources]
shared = { workspace = true }
core = { workspace = true }

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = ["src/prompts", "tests"]

[tool.ruff.lint]
# Enable rule sets to replace flake8 (E, F, W) and isort (I)
select = ["E", "F", "W", "I"]
ignore = []

[tool.ruff.lint.isort]
# Declare project's own modules for correct import sorting
known-first-party = ["cli", "config", "core", "prompts", "services", "shared"]

[tool.mypy]
exclude = ["src/prompts"]

# Handle workspace packages correctly
mypy_path = "src:src/core/src:src/shared/src"
namespace_packages = true
explicit_package_bases = true
