[project]
name = "core"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "shared",
]

[project.optional-dependencies]
document-processing = [
    "beautifulsoup4>=4.14.2",
    "llama-cloud-services>=0.6.79",
]
knowledge-graph = [
    "langchain-text-splitters>=1.0.0",
    "tenacity>=9.1.2",
]
retrieval = [
    "networkx>=3.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools.packages.find]
where = ["src"]
