[project]
name = "shared"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "crawl4ai>=0.7.6",
    "deepagents>=0.2.7",
    "google-genai>=1.39.1",
    "langchain>=1.0.3",
    "langchain-google-genai>=3.0.1",
    "langgraph>=1.0.2",
    "loguru>=0.7.3",
    "minio>=7.2.17",
    "nltk>=3.9.1",
    "numpy>=2.2.6",
    "openai>=1.109.1",
    "pydantic>=2.11.9",
    "pymilvus>=2.6.2",
    "python-dotenv>=1.1.1",
    "pyvi>=0.1.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "tiktoken>=0.11.0",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools.packages.find]
where = ["src"]
